--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.14",
     "@types/redux": "^3.6.0",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
