--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "typescript": "^4.0.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.14",
     "@types/redux": "^3.6.0",
+    "@types/uuid": "^8.3.0",
     "prettier": "2.2.1",
     "redux-devtools-extension": "^2.13.8"
   }
