--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.14",
+    "@types/react-router-dom": "^5.1.7",
     "@types/redux": "^3.6.0",
     "@types/uuid": "^8.3.0",
     "prettier": "2.2.1",
