--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "@types/react-redux": "^7.1.14",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.8",
     "@types/uuid": "^8.3.0",
     "prettier": "2.2.1",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6"
   }
 }
