--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/recharts": "^1.8.18",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "recharts": "2.0.0-beta.8",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "typescript": "^4.0.3",
