--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "brotracker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://SkyWalker1996x.github.io/brotracker",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
@@ -30,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -56,6 +59,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.8",
     "@types/uuid": "^8.3.0",
+    "gh-pages": "^3.1.0",
     "prettier": "2.2.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6"
